# copad

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  cliff.toml  install.sh  llms.txt
.githooks/: pre-push
.github/workflows/: release.yml
copad-cli/: Cargo.toml
copad-cli/src/: agent_status.rs  client.rs  commands.rs  main.rs  update.rs
copad-cli/src/plugin_cmds/: bookmark.rs  calendar.rs  context.rs  git.rs  jira.rs  mod.rs  recent.rs  slack.rs  todo.rs
copad-cli/src/usage/: claude.rs  codex.rs  limits.rs  mod.rs  model.rs  pricing.rs  render.rs
copad-core/: Cargo.toml
copad-core/src/: action_registry.rs  agent.rs  agent_cockpit.rs  approval.rs  background.rs  config.rs  context.rs  design_grab.rs  error.rs  event_bus.rs  fs_atomic.rs  goal.rs  lib.rs  mission.rs  paths.rs  pipeline.rs  plugin.rs  project.rs  protocol.rs  runledger.rs  session.rs  thread_pool.rs  trigger.rs  workflow.rs
copad-core/src/agents/: api-dev.md  architect.md  critic.md  reviewer.md
copad-core/src/pipeline/: role-implementer.yaml  role-planner.yaml  role-reviewer.yaml  team-ship-review.yaml
copad-core/tests/: seed_workflows.rs  socket_protocol.rs
copad-daemon/: Cargo.toml
copad-daemon/src/: cron_scheduler.rs  daemon_trigger_sink.rs  gui_registry.rs  lib.rs  main.rs  plugin_exec.rs  service_supervisor.rs  socket.rs  trigger_pump.rs  trigger_sink.rs
copad-ffi/: Cargo.toml
copad-ffi/src/: lib.rs
copad-ios/: .gitignore  README.md  copad-ios.entitlements  project.yml
copad-ios/Sources/: AppModel.swift  ContentView.swift  CopadApp.swift  TokenStore.swift  WebView.swift
copad-ios/scripts/: verify-sim.sh
copad-linux/: Cargo.toml  com.marshall.copad.desktop  install.sh
copad-linux/src/: app.rs  background.rs  cockpit_panel.rs  command_palette.rs  daemon_forward.rs  gui_client.rs  main.rs  panel.rs  plugin_panel.rs  search.rs  session.rs  socket.rs  statusbar.rs  tabs.rs  terminal.rs  url_click.rs  webview.rs  window.rs
copad-macos/: Package.resolved  Package.swift  run.sh
copad-macos/Resources/: AppIcon.icns
copad-macos/Sources/CCopadFFI/: dummy.c
copad-mux/: Cargo.toml  mux.example.toml
copad-mux/proptest-regressions/: state.txt
copad-mux/src/: agentstate.rs  client.rs  config.rs  control.rs  gitinfo.rs  lib.rs  model.rs  notify.rs  persist.rs  procinfo.rs  proto.rs  server.rs  state.rs  term.rs  tui.rs  usagepoll.rs  worktree.rs
copad-term/: Cargo.toml
copad-term/src/: lib.rs
copad-term/tests/: pty_round_trip.rs
docs/: INDEX.md  architecture.md  cli.md  config.md  context-bridge.md  core-lib.md  decisions.md  gui-daemon-protocol.md  harness-hooks.md  harness-integration.md  kb-panel.md  kb-protocol.md  linux-app.md  macos-app.md  macos-daemon-migration-plan.md  macos-gpu-renderer-plan.md  macos-parity-plan.md  macos-porting-guide.md  macos-post-renderer-catchup.md  macos-renderer-migration-plan.md  plugins.md  project-orchestration.md  roadmap.md  service-plugins.md  troubleshooting.md  workflow-runtime.md
examples/mobile/: tailscale-serve-setup.sh
examples/presence/: README.md  darwin-pmset.sh  hypridle-listener.conf  loginctl-poll.sh  swayidle.sh
examples/shell/: copad-context.zsh
examples/ssh/: copad-remote.sshconfig  remote-shellrc.sh
examples/triggers/: claude-agent-status.toml  claude-hooks.toml  cron-example.toml  hyprland-webkit-fix.toml  vision-flow-3.toml
examples/workflows/: catchup.yaml  cross-review.yaml  debug.yaml  handoff.yaml  mentor.yaml  ship.yaml  verify.yaml
nestty-cli/src/: commands.rs  main.rs
nestty-core/src/: action_registry.rs  background.rs  condition.rs  context.rs  event_bus.rs  lib.rs  paths.rs  plugin.rs  protocol.rs  session.rs  trigger.rs
nestty-daemon/: Cargo.toml
nestty-daemon/src/: daemon_trigger_sink.rs  gui_registry.rs  lib.rs  main.rs  service_supervisor.rs  socket.rs  trigger_pump.rs  trigger_sink.rs
nestty-ffi/src/: lib.rs
nestty-linux/: Cargo.toml
nestty-linux/src/: app.rs  daemon_forward.rs  gui_client.rs  main.rs  plugin_panel.rs  session.rs  socket.rs  statusbar.rs  tabs.rs  terminal.rs  window.rs
nestty-macos/: run.sh
nestty-macos/shell-hooks/: nestty-cwd.bash  nestty-cwd.fish  nestty-cwd.zsh
nestty-term/: Cargo.toml
nestty-term/src/: lib.rs
nestty-term/tests/: pty_round_trip.rs
plugins/bookmark/: Cargo.toml  plugin.toml
plugins/bookmark/src/: bookmark.rs  canonical.rs  main.rs  store.rs
plugins/calendar/: Cargo.toml  plugin.toml  triggers.example.toml
plugins/claude/: Cargo.toml  plugin.toml
plugins/claude/src/: main.rs
plugins/discord/: Cargo.toml  panel.html  plugin.toml  triggers.example.toml
plugins/docs/: Cargo.toml  panel.html  plugin.toml
plugins/docs/src/: main.rs
plugins/echo/: Cargo.toml  plugin.toml
plugins/echo/src/: main.rs
plugins/git/: Cargo.toml  plugin.toml  triggers.example.toml
plugins/git/src/: config.rs  main.rs  watcher.rs
plugins/jira/: Cargo.toml  plugin.toml  triggers.example.toml
plugins/kb/: Cargo.toml  plugin.toml
plugins/kb/src/: kb.rs  main.rs
plugins/llm/: Cargo.toml  plugin.toml  triggers.example.toml
plugins/llm/src/: config.rs  main.rs  store.rs
plugins/pilot/: Cargo.toml  panel.html  plugin.toml  triggers.example.toml
plugins/pilot/src/: csd.rs  dispatcher.rs  main.rs  queue.rs
plugins/projects/: Cargo.toml  panel.html  plugin.toml
plugins/projects/src/: main.rs
plugins/slack/: Cargo.toml  panel.html  plugin.toml  triggers.example.toml
plugins/todo/: Cargo.toml  panel.html  plugin.toml  triggers.example.toml
plugins/todo/src/: config.rs  loop_prompt.rs  loop_prompt_template.txt  main.rs  prompt.rs  store.rs  todo.rs  watcher.rs
plugins/web-bridge/: Cargo.toml  plugin.toml
plugins/web-bridge/src/: agents.rs  cockpit.rs  daemon_client.rs  font.rs  main.rs  push.rs  tmux.rs
plugins/web-bridge/static/: index.html  manifest.webmanifest  sw.js
scripts/: build-icons.sh  codesign-dev.sh  e2e-daemon-client.sh  gen-vapid-keys.sh  install-claude-hooks.sh  install-dev.sh  install-macos.sh  install-plugins.sh
scripts/hooks/: claude-agent-status.sh
scripts/stress/: throughput.sh  tui-loop.sh
(+96 files in other folders)
