[workspace]
resolver = "2"
members = [
    "copad-core",
    "copad-daemon",
    "copad-linux",
    "copad-cli",
    "copad-ffi",
    "copad-term",
    "plugins/echo",
    "plugins/kb",
    "plugins/calendar",
    "plugins/slack",
    "plugins/llm",
    "plugins/todo",
    "plugins/git",
    "plugins/discord",
    "plugins/bookmark",
    "plugins/jira",
    "plugins/web-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cross-platform custom terminal emulator"
repository = "https://github.com/marshallku/copad"
