[workspace]
resolver = "2"
members = [
    "copad-core",
    "copad-daemon",
    "copad-linux",
    "copad-cli",
    "copad-ffi",
    "copad-term",
    "plugins/echo",
    "plugins/kb",
    "plugins/calendar",
    "plugins/slack",
    "plugins/llm",
    "plugins/todo",
    "plugins/git",
    "plugins/discord",
    "plugins/bookmark",
    "plugins/jira",
    "plugins/projects",
    "plugins/docs",
    "plugins/web-bridge",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Cross-platform custom terminal emulator"
repository = "https://github.com/marshallku/copad"
