[package]
name = "copad-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C-ABI bridge from copad-core to platform UIs that can't link Rust directly (currently copad-macos)."
repository.workspace = true

[lib]
name = "copad_ffi"
# staticlib so libcopad_ffi.a embeds into Copad.app at link time. cdylib would
# work too but adds a dylib distribution step; the spike stays simpler.
crate-type = ["staticlib"]

[dependencies]
serde_json = "1"
# copad-core brings the TriggerEngine + ActionRegistry + EventBus types we
# expose through FFI. workspace-relative path so a single workspace cargo
# build wires both crates without duplication.
copad-core = { path = "../copad-core" }
