[package]
name = "copad-mux"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "copad agent-orchestration terminal multiplexer — authoritative state model + server"
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
alacritty_terminal = "0.26"
# serde feature: lets Color/Modifier cross the client render protocol wire.
ratatui = { version = "0.29", features = ["serde"] }
# serde feature: lets crossterm KeyEvent be forwarded from client to server. Pinned
# to the exact version ratatui 0.29 re-exports so cargo unifies (no duplicate crate).
crossterm = { version = "0.28.1", features = ["serde"] }
libc = "0.2"

[[bin]]
name = "copad-mux"
path = "src/bin/copad-mux.rs"

[dev-dependencies]
proptest = "1"
