[package]
name = "copad-plugin-bookmark"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "First-party bookmark plugin for copad — URL → KB note with auto-link to similar existing notes."
repository.workspace = true

[[bin]]
name = "copad-plugin-bookmark"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }
sha1 = "0.10"
url = "2"
libc = "0.2"
copad-core = { path = "../../copad-core" }

[dev-dependencies]
tempfile = "3"
