[package]
name = "copad-plugin-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Claude Code state surfacing plugin for copad — last_handoff, list_dirty, list_sessions, session_state."
repository.workspace = true

[[bin]]
name = "copad-plugin-claude"
path = "src/main.rs"

[dependencies]
serde_json = "1"
