[package]
name = "copad-plugin-echo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mock service plugin for copad — verifies the protocol shape end-to-end."
repository.workspace = true

[[bin]]
name = "copad-plugin-echo"
path = "src/main.rs"

[dependencies]
serde_json = "1"
