[package]
name = "copad-plugin-kb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "First-party KB service plugin for copad — grep + filename search over ~/docs."
repository.workspace = true

[[bin]]
name = "copad-plugin-kb"
path = "src/main.rs"

[dependencies]
serde_json = "1"
libc = "0.2"
copad-core = { path = "../../copad-core" }
