[package]
name = "copad-plugin-pilot"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Autonomous goal-queue orchestration plugin for copad — drives one interactive agent session at a time via csd."
repository.workspace = true

[[bin]]
name = "copad-plugin-pilot"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
