[package]
name = "nestty-plugin-web-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "First-party nestty plugin — HTTP+WebSocket broker over nesttyd's socket surface so a remote phone/laptop can drive the local harness (Slice 3.0 of the remote-harness effort)."
repository.workspace = true

[[bin]]
name = "nestty-plugin-web-bridge"
path = "src/main.rs"

[dependencies]
nestty-core = { path = "../../nestty-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
    "io-util",
    "time",
] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["set-header"] }
thiserror = "1"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
portable-pty = "0.9"
# Process tree walking for agent detection (claude/codex descendant of
# tmux pane PID). `system` feature is the minimum — we read name + cwd
# + start_time, no disks/network. Matches ~/dev/tmx's dependency.
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
dirs = "5"
# Web Push (RFC 8030) for the PWA notification path. Server holds the
# VAPID key pair from env, fans out to stored subscriptions when an
# attention-queue entry matches the subscription's `kinds` filter.
web-push = "0.11"
base64 = "0.22"
sha2 = "0.10"
